# applab-discovery

./: .gitignore  .mcp.json  .npmignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
doc/: esvp-protocol.md
runtime/: Cargo.toml
runtime/crates/esvp-host-runtime/: Cargo.toml
runtime/crates/esvp-host-runtime/src/: main.rs  mitm.rs
scripts/: build-host-runtime.mjs  pack-mcpb.mjs  stage-mcpb.mjs  verify-host-runtime-bundle.mjs
skills/generate-assets/: SKILL.md
skills/knowledge-brain/: SKILL.md
skills/mobile-test/: SKILL.md
skills/open-ui/: SKILL.md
skills/quick-capture/: SKILL.md
skills/task-hub/: SKILL.md
skills/web-test/: SKILL.md
src/: cli.ts  index.ts
src/core/: appVersion.ts
src/core/analyze/: aiActionDetector.ts  frames.ts  ocr.ts
src/core/android/: adb.ts
src/core/canvas/: gridCompositor.ts  mockup.ts  render.ts
src/core/capture/: emulator.ts  screen.ts
src/core/export/: document.ts  image.ts  import.ts  infographic-template.html  infographic.ts  pipeline.ts  video.ts
src/core/flow-map/: builder.ts
src/core/integrations/: esvp-host-runtime.ts  esvp-local-device.ts  esvp-local-runtime.ts  esvp-local.ts  esvp-managed-proxy.ts  esvp-mobile.ts  esvp-network-profile.ts  esvp.ts  local-app-http-trace.ts  local-network-proxy.ts  physical-capture.ts
src/core/skills/: gating.ts  (+4 more)
src/db/: index.ts  schema.ts
src/integrations/: drive.ts  jira.ts  notion.ts
src/mcp/: server.ts
src/swift/: VisionHelper.swift
src/web/: index.html  server.ts
(+40 files in other folders)
